# TwinAi

./: .env.example  .gitignore  README.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: assets.py  audit_logs.py  auth.py  chat.py  deps.py  health.py  iot.py  llm.py  manuals.py  operational_incidents.py  org.py  phase5_routing.py  purchase_requests.py  reasoning.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/models/: __init__.py  domain.py
apps/api/app/schemas/: __init__.py  domain.py
apps/api/app/services/: bootstrap.py  chat.py  document_parser.py  embeddings.py  health.py  iot_ingest.py  llm_agent.py  llm_health.py  n8n_webhook.py  neo4j_sync.py  notification_flow.py  object_storage.py  operational_incidents.py  purchase_workflow.py  rag.py  reasoning.py  repositories.py  routing_context.py  schema_patches.py  seed.py  system_health.py
apps/api/app/tests/: test_asset_contact_routing.py  test_chat_agent.py  test_escalation_routing.py  test_health.py  test_iot_ingest.py  test_operational_incidents.py  test_purchase_phase5.py  test_rag.py  test_reasoning.py
apps/api/app/workers/: __init__.py
apps/api/twinai_agentic_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
demo-agentic-ai/: README.md  app.js  index.html  styles.css
docs/: api.md  architecture.md  deployment.md  ontology.md
infra/: docker-compose.yml
phan-tich-bien-ban-17-04-2026/: 01-tom-tat-dieu-hanh.md  02-phan-tich-chien-luoc.md  05-rui-ro-va-cau-hoi-can-lam-ro.md  07-gia-lap-khoi-dong-mvp-thang-may.md  (+1 more)
(+58 files in other folders)
