[project]
name = "twinai-agentic-api"
version = "0.1.0"
description = "FastAPI backend for the TwinAI Agentic Ontology MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "neo4j>=5.24.0",
  "minio>=7.2.0",
  "pypdf>=5.5.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.12",
  "pyjwt>=2.9.0",
  "bcrypt>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
